# KU_ws

.catkin_tools/profiles/default/: devel_collisions.txt
configuration_files/: mecanumrover_base_local_planner_params.yaml
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/mecanumrover_samples/: .catkin  .rosinstall
devel/.private/mecanumrover_samples/lib/mecanumrover_samples/: joycon  pub_odom  vmecanum_liftup_sus  vmecanum_odom  vmecanum_sensor  vmecanum_twist
devel/.private/mecanumrover_samples/lib/pkgconfig/: mecanumrover_samples.pc
devel/.private/megarover_description/: .catkin  local_setup.sh
devel/.private/megarover_description/lib/pkgconfig/: megarover_description.pc
devel/.private/navigation/: .catkin  setup.sh
devel/.private/navigation/lib/pkgconfig/: navigation.pc
devel/.private/vs_rover_options_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/mecanumrover_samples/: joycon  pub_odom  vmecanum_liftup_sus  vmecanum_odom  vmecanum_sensor  vmecanum_twist
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  mecanumrover_samples.pc  megarover_description.pc  navigation.pc  vs_rover_options_description.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/mecanumrover_samples/cmake/: mecanumrover_samplesConfig-version.cmake  mecanumrover_samplesConfig.cmake
devel/share/megarover_description/cmake/: megarover_descriptionConfig-version.cmake  megarover_descriptionConfig.cmake
devel/share/navigation/cmake/: navigationConfig-version.cmake  navigationConfig.cmake
devel/share/vs_rover_options_description/cmake/: vs_rover_options_descriptionConfig-version.cmake  vs_rover_options_descriptionConfig.cmake
launch/: simulation.launch
map/: 1samplemap.pgm  1samplemap.yaml
src/: going_to_target.py
src/dynamic_human_layer/: CMakeLists.txt  package.xml  plugins.xml
src/dynamic_human_layer/cfg/: DynamicHumanLayer.cfg
src/dynamic_human_layer/include/dynamic_human_layer/: dynamic_human_layer.h
src/dynamic_human_layer/src/: dynamic_human_layer.cpp
urdf/: vmecanumrover.xacro
worlds/: sample.world  testing.world
(+6 files in other folders)
