<?xml version="1.0"?>
<package format="2">
  <name>dynamic_human_layer</name>
  <version>0.0.0</version>
  <description>The dynamic_human_layer package</description>

  <maintainer email="ppaopaoaopopa@gmail.com">PaoAvalos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_ros</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>people_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <pluginlib plugin="dynamic_human_layer::DynamicHumanLayer" />
  </export>
</package>
